# QAeCore

./: .gitignore  CONTEXT7-PERSISTENT-DOCS-WORKFLOW.md  README.md  Scry-QAeCore-20250816-192908.txt  mcp_settings.json
QAeonCoreDevelopment/: calib.csv  calib.json  pyproject.toml
QAeonCoreDevelopment/Quantum Aeon Fluxor Project/: main.py  qacore_gemini_integration.py
QAeonCoreDevelopment/Quantum Aeon Fluxor Project/Archon(SuperVisor Agent)/: _init__.py
QAeonCoreDevelopment/Quantum Aeon Fluxor Project/Chora(Agent Prototypes)/: _init__.py
QAeonCoreDevelopment/Quantum Aeon Fluxor Project/Hermetic Engine(Persistent Data)/: _init__.py
QAeonCoreDevelopment/Quantum Aeon Fluxor Project/Hermetic Engine(Persistent Data)/Emergent Chironomicon(Coherent Vectors)/: memory_logger.py
QAeonCoreDevelopment/Quantum Aeon Fluxor Project/Pleroma(Reasoning)/: _init__.py
QAeonCoreDevelopment/Quantum Aeon Fluxor Project/Syzygy(ConversationalFramework)/: _init__.py
QAeonCoreDevelopment/Quantum Aeon Fluxor Project/Syzygy(ConversationalFramework)/Integration_Prototyping/: qacore_prompt_engine.py
QAeonCoreDevelopment/configs/: .qaf_tuning.json  codex_bindings.json
QAeonCoreDevelopment/memory/: episodic_log.md
QAeonCoreDevelopment/metrics/: calibrate.jsonl  ingest.jsonl
QAeonCoreDevelopment/quantum_aeon_fluxor/: __init__.py  display.py  main.py  myth_map.json  qacore_gemini_integration.py
QAeonCoreDevelopment/quantum_aeon_fluxor/archon__supervisor_agent/: __init__.py  archon.py  archon_new.tmp  state.py
QAeonCoreDevelopment/quantum_aeon_fluxor/archon__supervisor_agent/Henosis(Interface)/: boot_archon.py
QAeonCoreDevelopment/quantum_aeon_fluxor/chora__agent_prototypes/: __init__.py
QAeonCoreDevelopment/quantum_aeon_fluxor/docs/: Here's a Summary of the programmatic Flow.txt  Quantum Aeon Fluxor Project Roadmap.md  UserGuide.md  UserGuide.xml  oldUserGuide.xml
QAeonCoreDevelopment/quantum_aeon_fluxor/docs/ToDo/: Archon Refactor Sketch.md  Implementation Matrix.md  refactorring.md
QAeonCoreDevelopment/quantum_aeon_fluxor/docs/txt/: Quantum Aeon Fluxor Project HISTORICAL Roadmap.txt  UserGuide.md  UserGuide.txt
QAeonCoreDevelopment/quantum_aeon_fluxor/hermetic_engine__persistent_data/: __init__.py  longterm.py
QAeonCoreDevelopment/quantum_aeon_fluxor/hermetic_engine__persistent_data/embedding/: gemini_embedder.py
QAeonCoreDevelopment/quantum_aeon_fluxor/hermetic_engine__persistent_data/indexing/: index_folder.py  ingest.py
QAeonCoreDevelopment/quantum_aeon_fluxor/pleroma__reasoning/: BaseStrategy.py  LogicalFlowStrategy.py  __init__.py
QAeonCoreDevelopment/quantum_aeon_fluxor/syzygy__conversational_framework/: __init__.py  bridge.py
QAeonCoreDevelopment/quantum_aeon_fluxor/utils/: hash.py  metrics.py  metrics_summary.py
QAeonCoreDevelopment/scripts/: Untitled-.py  calibrate_embedding.py  codex_binding_loader.py  codex_enforcer.py  list_collections.py  print_uuid.py  smoke_test_archon.py
QAeonCoreDevelopment/tests/: test_metrics_summary.py
Volkh/: {.txt  (+1 more)
global-docs-mcp-python/: README.md  get_docs_request.json  pyproject.toml  requirements.txt
global-docs-mcp-python/context7_persistent_docs/: __init__.py  server.py
(+60 files in other folders)
