[project]
name = "context7-persistent-docs"
version = "0.1.0"
description = "MCP server that wraps Context7 with persistent local documentation storage"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.scripts]
context7-persistent-docs = "context7_persistent_docs.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []